--- a/index.html
+++ b/index.html
@@ -6,35 +6,13 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Seekers Alliance</title>
     <style>
-      #index {
-        background-image: url("./img/bg.jpg");
-        min-width: unset;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-content: flex-start;
-      }
-      #index.bgsize {
-        background-size: auto 100%;
-      }
-      #index-content {
-	      width: 100%;
-      	height: auto;
-      	max-width: 1920px;
-      	max-height: 1080px;
-      	aspect-ratio: 16 / 9;
-      	display: grid;
-      	grid-template-rows: 56% 40%;
-      	grid-template-columns: 55% 45%;
-      	margin: 0 auto;
-      }
-      #cnt_bt {
+      #index_home #cnt_bt {
         display: flex;
         flex-wrap: nowrap;
         justify-content: center;
         align-items: center;
       }
-      #cnt_bt img {
+      #index_home #cnt_bt img {
         width: 50%;
         height: auto;
       }
@@ -43,12 +21,12 @@
 
   </head>
   <body>
-    <div id="index" class="container-block bgsize">
-      <div id="index-content">
+    <div id="index_home" class="index container-block bgsize">
+      <div class="index-content">
         <div></div>
         <div></div>
         <div id="cnt_bt">
-          <a href="./faction.html" target="_self"><img src="./img/connect_button.png"></a>
+          <a href="./createprofile.html" target="_self"><img src="./img/connect_button.png"></a>
         </div>
         <div></div>
       </div>
